// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Test > Snapshot > Active 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #5E56F0;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 6px;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #5E56F0;
  background-color: #5E56F01A;
}

<a
  class="c0"
  data-testid="bezier-react-nav-item"
  role="menuitem"
  target="_self"
>
  <div
    class="c1"
  >
    <svg
      class="c2"
      color="bgtxt-blue-normal"
      data-testid="bezier-react-nav-item-left-icon"
      fill="none"
      foundation="[object Object]"
      height="20"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="c3 c4"
    style="--bezier-text-font-size: 1.4rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: inherit; --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
  >
    test-content
  </span>
</a>
`;

exports[`NavItem Test > Snapshot > Not active 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 6px;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #000000D9;
}

.c0:hover {
  background-color: #0000000D;
}

.c0:focus-visible {
  background-color: #0000000D;
}

<a
  class="c0"
  data-testid="bezier-react-nav-item"
  role="menuitem"
  target="_self"
>
  <div
    class="c1"
  >
    <svg
      class="c2"
      color="txt-black-dark"
      data-testid="bezier-react-nav-item-left-icon"
      fill="none"
      foundation="[object Object]"
      height="20"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="c3 c4"
    style="--bezier-text-font-size: 1.4rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: inherit; --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
  >
    test-content
  </span>
</a>
`;
